<resources>
    <string name="app_name">APlayer</string>
    <string name="home">Главная</string>
    <string name="library">Библиотека</string>
    <string name="profile">Профиль</string>
    <string name="play">play</string>
    <string name="album_image">album image</string>
    <string name="duration">Duration</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти</string>
    <string name="layout_style">Стиль списка</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="choose_list_style">Выберете стиль</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="list">Список</string>
    <string name="tile">Плитка</string>
    <string name="favorite">Избранное</string>
    <string name="timer">0:00</string>
</resources>