<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title=""
        android:icon="@drawable/baseline_search_24"
        app:iconTint="?attr/colorPrimaryVariant"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/sort"
        android:title="@string/app_name"
        android:icon="@drawable/baseline_sort"
        app:iconTint="?attr/colorPrimaryVariant"
        app:showAsAction="always"/>
    <item android:id="@+id/layout_style"
        android:title="@string/layout_style"
        android:icon="@drawable/baseline_queue_music_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />

</menu>