<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/music_item_cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/music_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/im_default"
            android:contentDescription="@string/album_image"/>

        <ImageView
            android:id="@+id/music_item_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/play"
            android:src="@drawable/baseline_play_arrow_24" />

        <TextView
            android:id="@+id/music_item_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/duration"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/music_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="2"
        android:text="@string/title"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/music_item_cardView"
        app:layout_constraintStart_toStartOf="@+id/music_item_cardView"
        app:layout_constraintTop_toBottomOf="@+id/music_item_cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>