<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    android:layout_marginHorizontal="3dp"
    android:layout_marginVertical="2dp"
    android:paddingVertical="2dp"
    android:backgroundTint="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/music_item_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/music_item_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/album_image"
                android:src="@drawable/im_default" />

            <ImageView
                android:id="@+id/music_item_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/play"
                android:src="@drawable/baseline_play_arrow_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/music_item_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/duration"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="13sp"
            android:paddingHorizontal="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/music_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintTop_toTopOf="@+id/music_item_title" />

        <TextView
            android:id="@+id/music_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLength="60"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/music_item_artist"
            app:layout_constraintEnd_toStartOf="@+id/music_item_duration"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/music_item_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:maxLength="30"
            android:maxLines="1"
            android:text="@string/artist"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/music_item_duration"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/music_item_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>